Se ha agregado F/G

--- a/index.html
+++ b/index.html
@@ -68,8 +68,12 @@
                     <td><input type="text" id="equivalencia8" readonly></td>
                 </tr>
                 <tr>
-                    <td>(P/A,i,g,n)</td>
+                    <td>(F/G,i,n)</td>
                     <td><input type="text" id="equivalencia9" readonly></td>
+                </tr>
+                <tr>
+                    <td>(P/A,i,g,n)</td>
+                    <td><input type="text" id="equivalencia10" readonly></td>
                 </tr>
             </table>
         </div>
