--- a/index.html
+++ b/index.html
@@ -1,82 +1,165 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="es">
+
 <head>
+    <meta charset="utf-8">
     <title>Factores de equivalencia</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="shortcut icon" href="Icon/price_change_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
-    <h1>Factores de equivalencia</h1>
-    <div id="contenedor">
-        <div id="contenedor2">
-            <div>
-                <img src = "Imagenes/grafico1.png" class="rotate-right">
+    <h1 class="textos titulos">Factores de equivalencia económica</h1>
+    <h5 class="textos descripcion">
+        Los factores de equivalencia económica son relaciones matemáticas que permiten convertir flujos de dinero a
+        diferentes momentos del tiempo,
+        considerando tasas de interés. Se usan para comparar o evaluar alternativas financieras.
+    </h5>
+    <div class="container-fluid">
+        <div class="row">
+            <!-- Columna izquierda -->
+            <div class="col-12 col-md-3 mb-3">
+                <div class="container-fluid d-flex gap-3 justify-content-center align-items-center h-100">
+                    <!-- Formulario -->
+                    <form id="inputForm">
+                        <div class="input-group mb-3 w-75 mx-auto">
+                            <span class="input-group-text">i (%):</span>
+                            <input type="text" id="i" class="form-control" aria-label="Tasa de interés" step="any"
+                                required>
+                        </div>
+                        <div class="input-group mb-3 w-75 mx-auto">
+                            <span class="input-group-text">n :</span>
+                            <input type="text" id="n" class="form-control" aria-label="Número de periodos" step="any"
+                                required>
+                        </div>
+                        <div class="input-group mb-3 w-75 mx-auto">
+                            <span class="input-group-text">g (%):</span>
+                            <input type="text" id="g" class="form-control" aria-label="Crecimiento" step="any">
+                        </div>
+                        <button type="submit" class="btn btn-primary d-block mx-auto" id="calcularBtn">Calcular</button>
+                    </form>
+                </div>
             </div>
-            <form id="input">
-                <label for="i">i (%):</label>
-                <input type="number" id="i" name="i" step="any" required>
-                <br>
-                <label for="n">n:</label>
-                <input type="number" id="n" name="n" step="any" required>
-                <br>
-                <label for="g">g (%):</label>
-                <input type="number" id="g" name="g" step="any">
-                <br>
-                <input type="submit" value="Calcular">
-            </form>
-            <div>
-                <img src ="Imagenes/grafico2.png" class="rotate-left">
+            <!-- Columan derecha -->
+            <div class="col-12 col-md-9">
+                <div class="container-fluid">
+                    <div class="row h-100">
+                        <!-- Tarjeta 1 -->
+                        <div class="col-6 col-md-6 col-lg-3 mb-3">
+                            <div class="card tarjeta-resultado h-100">
+                                <div
+                                    class="card-body resultado-cuerpo d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title">(F/P,i,n)</h5>
+                                    <input type="text" class="output w-75" id="equivalencia1" readonly>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Tarjeta 2 -->
+                        <div class="col-6 col-md-6 col-lg-3 mb-3">
+                            <div class="card tarjeta-resultado h-100">
+                                <div
+                                    class="card-body resultado-cuerpo d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title">(P/F,i,n)</h5>
+                                    <input type="text" class="output w-75" id="equivalencia2" readonly>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Tarjeta 3 -->
+                        <div class="col-6 col-md-6 col-lg-3 mb-3">
+                            <div class="card tarjeta-resultado h-100">
+                                <div
+                                    class="card-body resultado-cuerpo d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title">(P/A,i,n)</h5>
+                                    <input type="text" class="output w-75" id="equivalencia3" readonly>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Tarjeta 4 -->
+                        <div class="col-6 col-md-6 col-lg-3 mb-3">
+                            <div class="card tarjeta-resultado h-100">
+                                <div
+                                    class="card-body resultado-cuerpo d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title">(A/P,i,n)</h5>
+                                    <input type="text" class="output w-75" id="equivalencia4" readonly>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <!-- Tarjeta 5 -->
+                        <div class="col-6 col-md-6 col-lg-3 mb-3" style="height: 150px;">
+                            <div class="card tarjeta-resultado h-100">
+                                <div
+                                    class="card-body resultado-cuerpo d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title">(F/A,i,n)</h5>
+                                    <input type="text" class="output w-75" id="equivalencia5" readonly>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Tarjeta 6 -->
+                        <div class="col-6 col-md-6 col-lg-3 mb-3">
+                            <div class="card tarjeta-resultado h-100">
+                                <div
+                                    class="card-body resultado-cuerpo d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title">(A/F,i,n)</h5>
+                                    <input type="text" class="output w-75" id="equivalencia6" readonly>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Tarjeta 7 -->
+                        <div class="col-6 col-md-6 col-lg-3 mb-3">
+                            <div class="card tarjeta-resultado h-100">
+                                <div
+                                    class="card-body resultado-cuerpo d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title">(P/G,i,n)</h5>
+                                    <input type="text" class="output w-75" id="equivalencia7" readonly>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Tarjeta 8 -->
+                        <div class="col-6 col-md-6 col-lg-3 mb-3">
+                            <div class="card tarjeta-resultado h-100">
+                                <div
+                                    class="card-body resultado-cuerpo d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title">(A/G,i,n)</h5>
+                                    <input type="text" class="output w-75" id="equivalencia8" readonly>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                    <div class="row justify-content-center">
+                        <!-- Tarjeta 9 -->
+                        <div class="col-6 col-md-6 col-lg-3 mb-3" style="height: 150px;">
+                            <div class="card tarjeta-resultado h-100">
+                                <div
+                                    class="card-body resultado-cuerpo d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title">(F/G,i,n)</h5>
+                                    <input type="text" class="output w-75" id="equivalencia9" readonly>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Tarjeta 10 -->
+                        <div class="col-6 col-md-6 col-lg-3 mb-3">
+                            <div class="card tarjeta-resultado h-100">
+                                <div
+                                    class="card-body resultado-cuerpo d-flex flex-column justify-content-center align-items-center">
+                                    <h5 class="card-title">(P/A,i,g,n)</h5>
+                                    <input type="text" class="output w-75" id="equivalencia10" readonly>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div>
-            <h2>Equivalencias</h2>
-            <table>
-                <tr>
-                    <th>Factor</th>
-                    <th>Valor</th>
-                </tr>
-                <tr>
-                    <td>(F/P,i,n)</td>
-                    <td><input type="text" id="equivalencia1" readonly></td>
-                </tr>
-                <tr>
-                    <td>(P/F,i,n)</td>
-                    <td><input type="text" id="equivalencia2" readonly></td>
-                </tr>
-                <tr>
-                    <td>(P/A,i,n)</td>
-                    <td><input type="text" id="equivalencia3" readonly></td>
-                </tr>
-                <tr>
-                    <td>(A/P,i,n)</td>
-                    <td><input type="text" id="equivalencia4" readonly></td>
-                </tr>
-                <tr>
-                    <td>(F/A,i,n)</td>
-                    <td><input type="text" id="equivalencia5" readonly></td>
-                </tr>
-                <tr>
-                    <td>(A/F,i,n)</td>
-                    <td><input type="text" id="equivalencia6" readonly></td>
-                </tr>
-                <tr>
-                    <td>(P/G,i,n)</td>
-                    <td><input type="text" id="equivalencia7" readonly></td>
-                </tr>
-                <tr>
-                    <td>(A/G,i,n)</td>
-                    <td><input type="text" id="equivalencia8" readonly></td>
-                </tr>
-                <tr>
-                    <td>(F/G,i,n)</td>
-                    <td><input type="text" id="equivalencia9" readonly></td>
-                </tr>
-                <tr>
-                    <td>(P/A,i,g,n)</td>
-                    <td><input type="text" id="equivalencia10" readonly></td>
-                </tr>
-            </table>
         </div>
     </div>
-    <script src="equivalencias.js"></script>
+</body>
+<script src="equivalencias.js"></script>
+
 </html>
